# bricsctf-2024-quals

./: README.md
tasks/crypto/easy-BigBlackCode/: easy.sage  prepare_public.sh
tasks/crypto/easy-BigBlackCode/deploy/: Dockerfile  docker-compose.yml  easy.sage  entrypoint.sh
tasks/crypto/easy-BigBlackCode/solution/: README.MD  sol.sage
tasks/crypto/hard-xoshiro256++/: README.md  prepare_public.sh
tasks/crypto/hard-xoshiro256++/solution/: 3.py  (+1 more)
tasks/crypto/medium-neplox_wallet/: README.MD  prepare_public.sh
tasks/htb/surius-6b/: README.md
tasks/htb/surius-6b-system/: README.md
tasks/htb/surius-6b-user/: README.md
tasks/htb/vortex/: README.md  prepare_public.sh
tasks/htb/vortex-system/: README.md
tasks/htb/vortex-user/: README.md
tasks/misc/easy-shelfing/: README.md  prepare_public.sh
tasks/misc/hard-mlgoesbrr/: README.md  prepare_public.sh
tasks/misc/hard-mlgoesbrr/deploy/ydfcode/ydfmacro/: Cargo.toml
tasks/misc/hard-mlgoesbrr/deploy/ydfcode/ydfmacro/src/: lib.rs
tasks/misc/medium-jabba/: README.md  prepare_public.sh
tasks/pwn/easy-gollum/: README.md  prepare_public.sh
tasks/pwn/hard-physler/: README.md  prepare_public.sh
tasks/pwn/medium-chains/: README.md  prepare_public.sh
tasks/pwn/physler/: README.md  prepare_public.sh
tasks/reverse/easy-exfilter/: README.md  prepare_public.sh
tasks/reverse/hard-enter-the-void/: README.md
tasks/reverse/medium-dolly/: README.md
tasks/web/easy-villa/: README.md  prepare_public.sh
tasks/web/hard-excess/: README.md  prepare_public.sh
tasks/web/medium-mirage/: README.md  prepare_public.sh
(+282 files in other folders)
